Notebook - Added training functions for all the feature sets

--- a/notebooks/PancakePredictPortfolio.ipynb
+++ b/notebooks/PancakePredictPortfolio.ipynb
@@ -911,11 +911,6 @@
     "\n",
     "\n",
     "def main(train_df, validate_df, clfs, threshold_list, cols_to_leave):\n",
-    "\n",
-    "    train_df = prepare_data(train_df, cols_to_leave)\n",
-    "    validate_df = prepare_data(validate_df, cols_to_leave)\n",
-    "\n",
-    "    # X_train, y_train = train_df.drop([\"position\"], axis=1), train_df[\"position\"]\n",
     "    X_test, y_test = validate_df.drop([\"position\"], axis=1), validate_df[\"position\"]\n",
     "    X_train, y_train = train_df.drop([\"position\"], axis=1), train_df[\"position\"]\n",
     "\n",
@@ -944,6 +939,7 @@
     "from sklearn.neural_network import MLPClassifier\n",
     "from sklearn.svm import SVC\n",
     "\n",
+    "# Divide the classifiers into 2 groups (because of the training time)\n",
     "clfs = [RandomForestClassifier(100), RandomForestClassifier(500), RandomForestClassifier(1000),\n",
     "        DecisionTreeClassifier(criterion='entropy'), MLPClassifier(alpha=1, max_iter=1000), GaussianNB(),\n",
     "        KNeighborsClassifier(3), KNeighborsClassifier(5), KNeighborsClassifier(7),\n",
@@ -971,7 +967,7 @@
    },
    "outputs": [],
    "source": [
-    "experiment1_df = main(train_df=train_df, validate_df=validate_df, clfs=clfs, threshold_list=threshold_list, cols_to_leave=feature_set1)"
+    "experiment1_df = main(train_df=feature_set1_train_df, validate_df=feature_set1_validate_df, clfs=clfs, threshold_list=threshold_list, cols_to_leave=feature_set1)"
    ]
   },
   {
@@ -989,7 +985,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "experiment2_df = main(train_df=train_df, validate_df=validate_df, clfs=svc_clfs, threshold_list=threshold_list, cols_to_leave=feature_set1)"
+    "experiment2_df = main(train_df=feature_set1_train_df, validate_df=feature_set1_validate_df, clfs=svc_clfs, threshold_list=threshold_list, cols_to_leave=feature_set1)"
    ]
   },
   {
@@ -1005,7 +1001,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Feature set #2: all 247 players bet info (Bull/Bear): 247 columns in total"
+    "### Feature set #2: all 247 players bet info (Bull/Bear)"
    ]
   },
   {
@@ -1014,7 +1010,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "experiment3_df = main(train_df=train_df, validate_df=validate_df, clfs=clfs, threshold_list=threshold_list, cols_to_leave=feature_set2)"
+    "experiment3_df = main(train_df=feature_set2_train_df, validate_df=feature_set2_validate_df, clfs=clfs, threshold_list=threshold_list, cols_to_leave=feature_set2)"
    ]
   },
   {
@@ -1032,7 +1028,326 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "experiment4_df = main(train_df=feature_set2_train_df, validate_df=feature_set2_validate_df, clfs=svc_clfs, threshold_list=threshold_list, cols_to_leave=feature_set2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "experiment4_df.sort_values(by='accuracy_above_threshold', ascending=False).head(20)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Feature set #3: all 247 players bet info (Bull/Bear) + their bet size info (in CAKE tokens)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "experiment5_df = main(train_df=feature_set3_train_df, validate_df=feature_set3_validate_df, clfs=clfs, threshold_list=threshold_list, cols_to_leave=feature_set3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# This features set model takes much longer to train\n",
+    "experiment5_df.sort_values(by='accuracy_above_threshold', ascending=False).head(20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "experiment6_df = main(train_df=feature_set3_train_df, validate_df=feature_set3_validate_df, clfs=svc_clfs, threshold_list=threshold_list, cols_to_leave=feature_set3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "experiment6_df.sort_values(by='accuracy_above_threshold', ascending=False).head(20)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Feature set #4: the best 10% of players bet info (Bull/Bear) according to their overall profit"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "experiment7_df = main(train_df=feature_set4_train_df, validate_df=feature_set4_validate_df, clfs=clfs, threshold_list=threshold_list, cols_to_leave=feature_set4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# This features set model takes much longer to train\n",
+    "experiment7_df.sort_values(by='accuracy_above_threshold', ascending=False).head(20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "experiment8_df = main(train_df=feature_set4_train_df, validate_df=feature_set4_validate_df, clfs=svc_clfs, threshold_list=threshold_list, cols_to_leave=feature_set4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "experiment8_df.sort_values(by='accuracy_above_threshold', ascending=False).head(20)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Feature set #5: the best 10% of players bet info (Bull/Bear) according to their overall profit + their bet size info (in CAKE tokens)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "experiment9_df = main(train_df=feature_set5_train_df, validate_df=feature_set5_validate_df, clfs=clfs, threshold_list=threshold_list, cols_to_leave=feature_set5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# This features set model takes much longer to train\n",
+    "experiment9_df.sort_values(by='accuracy_above_threshold', ascending=False).head(20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "experiment10_df = main(train_df=feature_set5_train_df, validate_df=feature_set5_validate_df, clfs=svc_clfs, threshold_list=threshold_list, cols_to_leave=feature_set5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "experiment10_df.sort_values(by='accuracy_above_threshold', ascending=False).head(20)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Feature set #6: the best 20% of players bet info (Bull/Bear) according to their overall profit"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "experiment11_df = main(train_df=feature_set6_train_df, validate_df=feature_set6_validate_df, clfs=clfs, threshold_list=threshold_list, cols_to_leave=feature_set6)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# This features set model takes much longer to train\n",
+    "experiment11_df.sort_values(by='accuracy_above_threshold', ascending=False).head(20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "experiment12_df = main(train_df=feature_set6_train_df, validate_df=feature_set6_validate_df, clfs=svc_clfs, threshold_list=threshold_list, cols_to_leave=feature_set6)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "experiment12_df.sort_values(by='accuracy_above_threshold', ascending=False).head(20)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Feature set #7: the best 20% of players bet info (Bull/Bear) according to their overall profit + their bet size info (in CAKE tokens)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "experiment13_df = main(train_df=feature_set7_train_df, validate_df=feature_set7_validate_df, clfs=clfs, threshold_list=threshold_list, cols_to_leave=feature_set7)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# This features set model takes much longer to train\n",
+    "experiment13_df.sort_values(by='accuracy_above_threshold', ascending=False).head(20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "experiment14_df = main(train_df=feature_set7_train_df, validate_df=feature_set7_validate_df, clfs=svc_clfs, threshold_list=threshold_list, cols_to_leave=feature_set7)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "experiment14_df.sort_values(by='accuracy_above_threshold', ascending=False).head(20)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Feature set #8: total amount of CAKE tokens bets for Bull/Bear of the best 10% of players + total number of bets (Bull/Bear) of the best 10% of players"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "experiment15_df = main(train_df=feature_set8_train_df, validate_df=feature_set8_validate_df, clfs=clfs, threshold_list=threshold_list, cols_to_leave=feature_set8)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# This features set model takes much longer to train\n",
+    "experiment15_df.sort_values(by='accuracy_above_threshold', ascending=False).head(20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "experiment16_df = main(train_df=feature_set8_train_df, validate_df=feature_set8_validate_df, clfs=svc_clfs, threshold_list=threshold_list, cols_to_leave=feature_set8)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "experiment16_df.sort_values(by='accuracy_above_threshold', ascending=False).head(20)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Feature set #9: total amount of CAKE tokens bets for Bull/Bear of the best 20% of players + total number of bets (Bull/Bear) of the best 20% of players"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "experiment17_df = main(train_df=feature_set9_train_df, validate_df=feature_set9_validate_df, clfs=clfs, threshold_list=threshold_list, cols_to_leave=feature_set9)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# This features set model takes much longer to train\n",
+    "experiment17_df.sort_values(by='accuracy_above_threshold', ascending=False).head(20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "experiment18_df = main(train_df=feature_set9_train_df, validate_df=feature_set9_validate_df, clfs=svc_clfs, threshold_list=threshold_list, cols_to_leave=feature_set9)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "experiment18_df.sort_values(by='accuracy_above_threshold', ascending=False).head(20)"
+   ]
   }
  ],
  "metadata": {
