Notebook - Added pickle saving&loading the sklearn models

--- a/notebooks/PancakePredictPortfolio.ipynb
+++ b/notebooks/PancakePredictPortfolio.ipynb
@@ -886,9 +886,20 @@
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
+    "import pickle\n",
     "\n",
-    "def run(x_train, y_train, x_test, y_test, clf, threshold=0.7):\n",
-    "    clf.fit(x_train, y_train)\n",
+    "def run(models_name, x_train, y_train, x_test, y_test, clf, threshold=0.7):\n",
+    "    # Check if the model already exists\n",
+    "    model_name = f\"{models_name}_{str(clf)}.pkl\"\n",
+    "    model_dir = f\"../models/{model_name}\"\n",
+    "\n",
+    "    if os.path.exists(model_dir):\n",
+    "        print(f\"Loading the model {model_dir}\")\n",
+    "        with open(model_dir, 'rb') as f:\n",
+    "            clf = pickle.load(f)\n",
+    "    else:\n",
+    "        print(f\"Training the model {clf}\")\n",
+    "        clf.fit(x_train, y_train)\n",
     "\n",
     "    total_accuracy = clf.score(x_test, y_test)\n",
     "\n",
@@ -905,12 +916,18 @@
     "    # Get accuracy when probability is above threshold\n",
     "    accuracy = df[\"correct\"].sum() / (df['predicted_position'].count() + 0.0000001)  # Count only not NaN values\n",
     "\n",
+    "    # Save the model\n",
+    "    if not os.path.exists(model_dir):\n",
+    "        with open(model_dir,'wb') as f:\n",
+    "            print(f\"Saving the model {model_dir}\")\n",
+    "            pickle.dump(clf, f)\n",
+    "\n",
     "    return {'classifier': str(clf), 'threshold': threshold, 'total_accuracy': total_accuracy,\n",
     "            'total_number_of_bets': len(y_test), 'accuracy_above_threshold': accuracy,\n",
     "            'number_of_bets_above_threshold': df['predicted_position'].count()}\n",
     "\n",
     "\n",
-    "def main(train_df, validate_df, clfs, threshold_list, cols_to_leave):\n",
+    "def main(models_name, train_df, validate_df, clfs, threshold_list, cols_to_leave):\n",
     "    X_test, y_test = validate_df.drop([\"position\"], axis=1), validate_df[\"position\"]\n",
     "    X_train, y_train = train_df.drop([\"position\"], axis=1), train_df[\"position\"]\n",
     "\n",
@@ -918,7 +935,7 @@
     "\n",
     "    for clf in clfs:\n",
     "        for threshold in threshold_list:\n",
-    "            data = run(X_train, y_train, X_test, y_test, clf, threshold)\n",
+    "            data = run(models_name, X_train, y_train, X_test, y_test, clf, threshold)\n",
     "            data_list.append(data)\n",
     "\n",
     "    df = pd.DataFrame(data_list)\n",
@@ -967,7 +984,7 @@
    },
    "outputs": [],
    "source": [
-    "experiment1_df = main(train_df=feature_set1_train_df, validate_df=feature_set1_validate_df, clfs=clfs, threshold_list=threshold_list, cols_to_leave=feature_set1)"
+    "experiment1_df = main(models_name='experiment1', train_df=feature_set1_train_df, validate_df=feature_set1_validate_df, clfs=clfs, threshold_list=threshold_list, cols_to_leave=feature_set1)"
    ]
   },
   {
@@ -1348,6 +1365,13 @@
    "source": [
     "experiment18_df.sort_values(by='accuracy_above_threshold', ascending=False).head(20)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
