--- a/notebooks/PancakePredictPortfolio.ipynb
+++ b/notebooks/PancakePredictPortfolio.ipynb
@@ -549,6 +549,10 @@
     "        one_hot_encoded_cols = one_hot_encoded_cols.drop([col + '_House'], axis=1)\n",
     "        df = df.drop([col], axis=1).join(one_hot_encoded_cols)\n",
     "\n",
+    "    # Fill numeric columns with 0 (bet amount cols)\n",
+    "    numeric_columns = df.select_dtypes(include=['number']).columns\n",
+    "    df[numeric_columns] = df[numeric_columns].fillna(0)\n",
+    "\n",
     "    df = df.replace(\"Bull\", 1)\n",
     "    df = df.replace(\"Bear\", 0)\n",
     "\n",
@@ -1002,7 +1006,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "experiment2_df = main(train_df=feature_set1_train_df, validate_df=feature_set1_validate_df, clfs=svc_clfs, threshold_list=threshold_list, cols_to_leave=feature_set1)"
+    "experiment2_df = main(models_name='experiment2', train_df=feature_set1_train_df, validate_df=feature_set1_validate_df, clfs=svc_clfs, threshold_list=threshold_list, cols_to_leave=feature_set1)"
    ]
   },
   {
@@ -1027,7 +1031,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "experiment3_df = main(train_df=feature_set2_train_df, validate_df=feature_set2_validate_df, clfs=clfs, threshold_list=threshold_list, cols_to_leave=feature_set2)"
+    "experiment3_df = main(models_name='experiment3', train_df=feature_set2_train_df, validate_df=feature_set2_validate_df, clfs=clfs, threshold_list=threshold_list, cols_to_leave=feature_set2)"
    ]
   },
   {
@@ -1046,7 +1050,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "experiment4_df = main(train_df=feature_set2_train_df, validate_df=feature_set2_validate_df, clfs=svc_clfs, threshold_list=threshold_list, cols_to_leave=feature_set2)"
+    "experiment4_df = main(models_name='experiment4', train_df=feature_set2_train_df, validate_df=feature_set2_validate_df, clfs=svc_clfs, threshold_list=threshold_list, cols_to_leave=feature_set2)"
    ]
   },
   {
@@ -1071,7 +1075,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "experiment5_df = main(train_df=feature_set3_train_df, validate_df=feature_set3_validate_df, clfs=clfs, threshold_list=threshold_list, cols_to_leave=feature_set3)"
+    "experiment5_df = main(models_name='experiment5', train_df=feature_set3_train_df, validate_df=feature_set3_validate_df, clfs=clfs, threshold_list=threshold_list, cols_to_leave=feature_set3)"
    ]
   },
   {
@@ -1090,7 +1094,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "experiment6_df = main(train_df=feature_set3_train_df, validate_df=feature_set3_validate_df, clfs=svc_clfs, threshold_list=threshold_list, cols_to_leave=feature_set3)"
+    "experiment6_df = main(models_name='experiment6', train_df=feature_set3_train_df, validate_df=feature_set3_validate_df, clfs=svc_clfs, threshold_list=threshold_list, cols_to_leave=feature_set3)"
    ]
   },
   {
@@ -1115,7 +1119,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "experiment7_df = main(train_df=feature_set4_train_df, validate_df=feature_set4_validate_df, clfs=clfs, threshold_list=threshold_list, cols_to_leave=feature_set4)"
+    "experiment7_df = main(models_name='experiment7', train_df=feature_set4_train_df, validate_df=feature_set4_validate_df, clfs=clfs, threshold_list=threshold_list, cols_to_leave=feature_set4)"
    ]
   },
   {
@@ -1134,7 +1138,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "experiment8_df = main(train_df=feature_set4_train_df, validate_df=feature_set4_validate_df, clfs=svc_clfs, threshold_list=threshold_list, cols_to_leave=feature_set4)"
+    "experiment8_df = main(models_name='experiment8', train_df=feature_set4_train_df, validate_df=feature_set4_validate_df, clfs=svc_clfs, threshold_list=threshold_list, cols_to_leave=feature_set4)"
    ]
   },
   {
@@ -1159,7 +1163,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "experiment9_df = main(train_df=feature_set5_train_df, validate_df=feature_set5_validate_df, clfs=clfs, threshold_list=threshold_list, cols_to_leave=feature_set5)"
+    "experiment9_df = main(models_name='experiment9', train_df=feature_set5_train_df, validate_df=feature_set5_validate_df, clfs=clfs, threshold_list=threshold_list, cols_to_leave=feature_set5)"
    ]
   },
   {
@@ -1178,7 +1182,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "experiment10_df = main(train_df=feature_set5_train_df, validate_df=feature_set5_validate_df, clfs=svc_clfs, threshold_list=threshold_list, cols_to_leave=feature_set5)"
+    "experiment10_df = main(models_name='experiment10', train_df=feature_set5_train_df, validate_df=feature_set5_validate_df, clfs=svc_clfs, threshold_list=threshold_list, cols_to_leave=feature_set5)"
    ]
   },
   {
@@ -1203,7 +1207,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "experiment11_df = main(train_df=feature_set6_train_df, validate_df=feature_set6_validate_df, clfs=clfs, threshold_list=threshold_list, cols_to_leave=feature_set6)"
+    "experiment11_df = main(models_name='experiment11', train_df=feature_set6_train_df, validate_df=feature_set6_validate_df, clfs=clfs, threshold_list=threshold_list, cols_to_leave=feature_set6)"
    ]
   },
   {
@@ -1222,7 +1226,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "experiment12_df = main(train_df=feature_set6_train_df, validate_df=feature_set6_validate_df, clfs=svc_clfs, threshold_list=threshold_list, cols_to_leave=feature_set6)"
+    "experiment12_df = main(models_name='experiment12', train_df=feature_set6_train_df, validate_df=feature_set6_validate_df, clfs=svc_clfs, threshold_list=threshold_list, cols_to_leave=feature_set6)"
    ]
   },
   {
@@ -1236,7 +1240,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "### Feature set #7: the best 20% of players bet info (Bull/Bear) according to their overall profit + their bet size info (in CAKE tokens)"
    ]
@@ -1247,7 +1253,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "experiment13_df = main(train_df=feature_set7_train_df, validate_df=feature_set7_validate_df, clfs=clfs, threshold_list=threshold_list, cols_to_leave=feature_set7)"
+    "experiment13_df = main(models_name='experiment13', train_df=feature_set7_train_df, validate_df=feature_set7_validate_df, clfs=clfs, threshold_list=threshold_list, cols_to_leave=feature_set7)"
    ]
   },
   {
@@ -1266,7 +1272,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "experiment14_df = main(train_df=feature_set7_train_df, validate_df=feature_set7_validate_df, clfs=svc_clfs, threshold_list=threshold_list, cols_to_leave=feature_set7)"
+    "experiment14_df = main(models_name='experiment14', train_df=feature_set7_train_df, validate_df=feature_set7_validate_df, clfs=svc_clfs, threshold_list=threshold_list, cols_to_leave=feature_set7)"
    ]
   },
   {
@@ -1291,7 +1297,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "experiment15_df = main(train_df=feature_set8_train_df, validate_df=feature_set8_validate_df, clfs=clfs, threshold_list=threshold_list, cols_to_leave=feature_set8)"
+    "experiment15_df = main(models_name='experiment15', train_df=feature_set8_train_df, validate_df=feature_set8_validate_df, clfs=clfs, threshold_list=threshold_list, cols_to_leave=feature_set8)"
    ]
   },
   {
@@ -1310,7 +1316,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "experiment16_df = main(train_df=feature_set8_train_df, validate_df=feature_set8_validate_df, clfs=svc_clfs, threshold_list=threshold_list, cols_to_leave=feature_set8)"
+    "experiment16_df = main(models_name='experiment16', train_df=feature_set8_train_df, validate_df=feature_set8_validate_df, clfs=svc_clfs, threshold_list=threshold_list, cols_to_leave=feature_set8)"
    ]
   },
   {
@@ -1335,7 +1341,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "experiment17_df = main(train_df=feature_set9_train_df, validate_df=feature_set9_validate_df, clfs=clfs, threshold_list=threshold_list, cols_to_leave=feature_set9)"
+    "experiment17_df = main(models_name='experiment17', train_df=feature_set9_train_df, validate_df=feature_set9_validate_df, clfs=clfs, threshold_list=threshold_list, cols_to_leave=feature_set9)"
    ]
   },
   {
@@ -1354,7 +1360,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "experiment18_df = main(train_df=feature_set9_train_df, validate_df=feature_set9_validate_df, clfs=svc_clfs, threshold_list=threshold_list, cols_to_leave=feature_set9)"
+    "experiment18_df = main(models_name='experiment18', train_df=feature_set9_train_df, validate_df=feature_set9_validate_df, clfs=svc_clfs, threshold_list=threshold_list, cols_to_leave=feature_set9)"
    ]
   },
   {
