Notebook - Change the indexing of data sets: the index is now the 'epoch' column

--- a/notebooks/PancakePredictPortfolio.ipynb
+++ b/notebooks/PancakePredictPortfolio.ipynb
@@ -390,6 +390,7 @@
     "train_player_bet_df, train_bet_amount_df = utils.load_players_data(time_from_training, time_to_training)\n",
     "train_player_bet_df = train_player_bet_df.drop(columns=['start_timestamp', 'lock_timestamp', 'close_timestamp', 'lock_price', 'close_price', 'total_amount', 'bull_amount', 'bear_amount', 'position'])\n",
     "train_df = train_player_bet_df.merge(train_bet_amount_df, on = 'epoch', suffixes=['_bet','_amount'])\n",
+    "train_df = train_df.set_index('epoch')\n",
     "train_df"
    ]
   },
@@ -402,6 +403,7 @@
     "validate_player_bet_df, validate_bet_amount_df = utils.load_players_data(time_from_validation, time_to_validation)\n",
     "validate_player_bet_df = validate_player_bet_df.drop(columns=['start_timestamp', 'lock_timestamp', 'close_timestamp', 'lock_price', 'close_price', 'total_amount', 'bull_amount', 'bear_amount', 'position'])\n",
     "validate_df = validate_player_bet_df.merge(validate_bet_amount_df, on = 'epoch', suffixes=['_bet','_amount'])\n",
+    "validate_df = validate_df.set_index('epoch')\n",
     "validate_df"
    ]
   },
@@ -414,6 +416,7 @@
     "test_player_bet_df, test_bet_amount_df = utils.load_players_data(time_from_test, time_to_test)\n",
     "test_player_bet_df = test_player_bet_df.drop(columns=['start_timestamp', 'lock_timestamp', 'close_timestamp', 'lock_price', 'close_price', 'total_amount', 'bull_amount', 'bear_amount', 'position'])\n",
     "test_df = test_player_bet_df.merge(test_bet_amount_df, on = 'epoch', suffixes=['_bet','_amount'])\n",
+    "test_df = test_df.set_index('epoch')\n",
     "test_df"
    ]
   },
@@ -559,7 +562,7 @@
     "    df = df.replace(\"House\", np.nan)  # Although the House rows are dropped, we have to replace it to remove the category\n",
     "    df = df.astype(float)\n",
     "\n",
-    "    df.reset_index(drop=True, inplace=True)\n",
+    "    # df.reset_index(drop=True, inplace=True)\n",
     "\n",
     "    return df"
    ]
@@ -609,7 +612,9 @@
     "feature_set7.extend(feature_set1)\n",
     "feature_set7_train_df = prepare_data(train_df, feature_set7)\n",
     "feature_set7_validate_df = prepare_data(validate_df, feature_set7)\n",
-    "feature_set7_test_df = prepare_data(train_df, feature_set7)"
+    "feature_set7_test_df = prepare_data(train_df, feature_set7)\n",
+    "\n",
+    "feature_set1_validate_df"
    ]
   },
   {
@@ -619,7 +624,7 @@
    "outputs": [],
    "source": [
     "def create_aggregated_df(df, bet_type_columns, bet_size_columns, additional_columns):\n",
-    "    filtered_df = df[bet_size_columns + bet_type_columns + ['epoch', 'total_amount'] + additional_columns].copy()\n",
+    "    filtered_df = df[bet_size_columns + bet_type_columns + ['total_amount'] + additional_columns].copy()\n",
     "\n",
     "    # Calculate Bear number for each row\n",
     "    filtered_df['best_bear_number'] = filtered_df[bet_type_columns].isin(['Bear']).sum(axis=1)\n",
@@ -635,7 +640,7 @@
     "    for bet_type_column in bet_type_columns:\n",
     "        bet_size_column = bet_type_column.replace('_bet', '_amount')\n",
     "\n",
-    "        wallet_df = filtered_df[['epoch', bet_size_column, bet_type_column]]\n",
+    "        wallet_df = filtered_df[[bet_size_column, bet_type_column]]\n",
     "\n",
     "        bear_bets = np.where(wallet_df[bet_type_column] == 'Bear', wallet_df[bet_size_column], 0)\n",
     "        bull_bets = np.where(wallet_df[bet_type_column] == 'Bull', wallet_df[bet_size_column], 0)\n",
@@ -853,6 +858,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Check if the min-max values are 0-1\n",
     "feature_set2_train_df.describe()"
    ]
   },
@@ -892,7 +898,7 @@
     "import pandas as pd\n",
     "import pickle\n",
     "\n",
-    "def run(models_name, x_train, y_train, x_test, y_test, clf, threshold=0.7):\n",
+    "def run(models_name, x_train, y_train, x_test, y_test, clf, threshold=0.7, bet_size=3):\n",
     "    # Check if the model already exists\n",
     "    model_name = f\"{models_name}_{str(clf)}.pkl\"\n",
     "    model_dir = f\"../models/{model_name}\"\n",
@@ -916,7 +922,7 @@
     "    df[\"predicted_position\"] = np.where(df[\"Bull\"] > threshold, 1, df[\"predicted_position\"])\n",
     "\n",
     "    df[\"correct\"] = np.where(df[\"position\"] == df[\"predicted_position\"], 1, 0)\n",
-    "\n",
+    "    \n",
     "    # Get accuracy when probability is above threshold\n",
     "    accuracy = df[\"correct\"].sum() / (df['predicted_position'].count() + 0.0000001)  # Count only not NaN values\n",
     "\n",
@@ -931,7 +937,7 @@
     "            'number_of_bets_above_threshold': df['predicted_position'].count()}\n",
     "\n",
     "\n",
-    "def main(models_name, train_df, validate_df, clfs, threshold_list, cols_to_leave):\n",
+    "def main(models_name, train_df, validate_df, clfs, threshold_list, cols_to_leave, bet_size=3):\n",
     "    X_test, y_test = validate_df.drop([\"position\"], axis=1), validate_df[\"position\"]\n",
     "    X_train, y_train = train_df.drop([\"position\"], axis=1), train_df[\"position\"]\n",
     "\n",
@@ -939,7 +945,7 @@
     "\n",
     "    for clf in clfs:\n",
     "        for threshold in threshold_list:\n",
-    "            data = run(models_name, X_train, y_train, X_test, y_test, clf, threshold)\n",
+    "            data = run(models_name, X_train, y_train, X_test, y_test, clf, threshold, bet_size)\n",
     "            data_list.append(data)\n",
     "\n",
     "    df = pd.DataFrame(data_list)\n",
@@ -1003,7 +1009,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "experiment2_df = main(models_name='experiment2', train_df=feature_set1_train_df, validate_df=feature_set1_validate_df, clfs=svc_clfs, threshold_list=threshold_list, cols_to_leave=feature_set1)"
@@ -1072,7 +1080,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "experiment5_df = main(models_name='experiment5', train_df=feature_set3_train_df, validate_df=feature_set3_validate_df, clfs=clfs, threshold_list=threshold_list, cols_to_leave=feature_set3)"
@@ -1160,7 +1170,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "experiment9_df = main(models_name='experiment9', train_df=feature_set5_train_df, validate_df=feature_set5_validate_df, clfs=clfs, threshold_list=threshold_list, cols_to_leave=feature_set5)"
