--- a/notebooks/PancakePredictPortfolio.ipynb
+++ b/notebooks/PancakePredictPortfolio.ipynb
@@ -894,11 +894,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import importlib\n",
+    "import simulator\n",
+    "\n",
+    "importlib.reload(simulator)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
     "import pickle\n",
     "\n",
-    "def run(models_name, x_train, y_train, x_test, y_test, clf, threshold=0.7, bet_size=3):\n",
+    "def run(models_name, amount_data_df, x_train, y_train, x_test, y_test, clf, threshold=0.7, bet_size=3):\n",
     "    # Check if the model already exists\n",
     "    model_name = f\"{models_name}_{str(clf)}.pkl\"\n",
     "    model_dir = f\"../models/{model_name}\"\n",
@@ -916,12 +928,22 @@
     "    predicted_probability = clf.predict_proba(x_test)\n",
     "\n",
     "    # Create a df to compare the predicted_probability with the real y_test\n",
-    "    df = pd.DataFrame(predicted_probability, columns=[\"Bear\", \"Bull\"])\n",
+    "    df = pd.DataFrame(predicted_probability, columns=[\"Bear\", \"Bull\"], index=y_test.index)\n",
     "    df[\"position\"] = y_test.values\n",
     "    df[\"predicted_position\"] = np.where(df[\"Bear\"] > threshold, 0, np.nan)\n",
     "    df[\"predicted_position\"] = np.where(df[\"Bull\"] > threshold, 1, df[\"predicted_position\"])\n",
     "\n",
     "    df[\"correct\"] = np.where(df[\"position\"] == df[\"predicted_position\"], 1, 0)\n",
+    "\n",
+    "    df['bull_amount'] = amount_data_df['bull_amount']\n",
+    "    df['bear_amount'] = amount_data_df['bear_amount']\n",
+    "    df['total_amount'] = amount_data_df['total_amount']\n",
+    "    \n",
+    "    simulation_results_df = simulator.simulate(df[['position', 'bull_amount', 'bear_amount', 'total_amount']], df['predicted_position'], bet_size, add_bet_to_pool = True)\n",
+    "\n",
+    "    # Drop rows where prediction is null and calculate the total profit\n",
+    "    simulation_results_df = simulation_results_df[simulation_results_df['prediction'].notna()]\n",
+    "    profit = simulation_results_df['profit'].sum()\n",
     "    \n",
     "    # Get accuracy when probability is above threshold\n",
     "    accuracy = df[\"correct\"].sum() / (df['predicted_position'].count() + 0.0000001)  # Count only not NaN values\n",
@@ -934,10 +956,10 @@
     "\n",
     "    return {'classifier': str(clf), 'threshold': threshold, 'total_accuracy': total_accuracy,\n",
     "            'total_number_of_bets': len(y_test), 'accuracy_above_threshold': accuracy,\n",
-    "            'number_of_bets_above_threshold': df['predicted_position'].count()}\n",
+    "            'number_of_bets_above_threshold': df['predicted_position'].count(), 'profit': profit}\n",
     "\n",
     "\n",
-    "def main(models_name, train_df, validate_df, clfs, threshold_list, cols_to_leave, bet_size=3):\n",
+    "def main(models_name, amount_data_df, train_df, validate_df, clfs, threshold_list, cols_to_leave, bet_size=3):\n",
     "    X_test, y_test = validate_df.drop([\"position\"], axis=1), validate_df[\"position\"]\n",
     "    X_train, y_train = train_df.drop([\"position\"], axis=1), train_df[\"position\"]\n",
     "\n",
@@ -945,7 +967,7 @@
     "\n",
     "    for clf in clfs:\n",
     "        for threshold in threshold_list:\n",
-    "            data = run(models_name, X_train, y_train, X_test, y_test, clf, threshold, bet_size)\n",
+    "            data = run(models_name, amount_data_df, X_train, y_train, X_test, y_test, clf, threshold, bet_size)\n",
     "            data_list.append(data)\n",
     "\n",
     "    df = pd.DataFrame(data_list)\n",
@@ -989,12 +1011,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "experiment1_df = main(models_name='experiment1', train_df=feature_set1_train_df, validate_df=feature_set1_validate_df, clfs=clfs, threshold_list=threshold_list, cols_to_leave=feature_set1)"
+    "experiment1_df = main(amount_data_df=validate_df, models_name='experiment1', train_df=feature_set1_train_df, validate_df=feature_set1_validate_df, clfs=clfs, threshold_list=threshold_list, cols_to_leave=feature_set1)"
    ]
   },
   {
@@ -1014,7 +1034,7 @@
    },
    "outputs": [],
    "source": [
-    "experiment2_df = main(models_name='experiment2', train_df=feature_set1_train_df, validate_df=feature_set1_validate_df, clfs=svc_clfs, threshold_list=threshold_list, cols_to_leave=feature_set1)"
+    "experiment2_df = main(amount_data_df=validate_df, models_name='experiment2', train_df=feature_set1_train_df, validate_df=feature_set1_validate_df, clfs=svc_clfs, threshold_list=threshold_list, cols_to_leave=feature_set1)"
    ]
   },
   {
@@ -1039,7 +1059,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "experiment3_df = main(models_name='experiment3', train_df=feature_set2_train_df, validate_df=feature_set2_validate_df, clfs=clfs, threshold_list=threshold_list, cols_to_leave=feature_set2)"
+    "experiment3_df = main(amount_data_df=validate_df, models_name='experiment3', train_df=feature_set2_train_df, validate_df=feature_set2_validate_df, clfs=clfs, threshold_list=threshold_list, cols_to_leave=feature_set2)"
    ]
   },
   {
@@ -1058,7 +1078,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "experiment4_df = main(models_name='experiment4', train_df=feature_set2_train_df, validate_df=feature_set2_validate_df, clfs=svc_clfs, threshold_list=threshold_list, cols_to_leave=feature_set2)"
+    "experiment4_df = main(amount_data_df=validate_df, models_name='experiment4', train_df=feature_set2_train_df, validate_df=feature_set2_validate_df, clfs=svc_clfs, threshold_list=threshold_list, cols_to_leave=feature_set2)"
    ]
   },
   {
@@ -1085,7 +1105,7 @@
    },
    "outputs": [],
    "source": [
-    "experiment5_df = main(models_name='experiment5', train_df=feature_set3_train_df, validate_df=feature_set3_validate_df, clfs=clfs, threshold_list=threshold_list, cols_to_leave=feature_set3)"
+    "experiment5_df = main(amount_data_df=validate_df, models_name='experiment5', train_df=feature_set3_train_df, validate_df=feature_set3_validate_df, clfs=clfs, threshold_list=threshold_list, cols_to_leave=feature_set3)"
    ]
   },
   {
@@ -1101,10 +1121,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
-    "experiment6_df = main(models_name='experiment6', train_df=feature_set3_train_df, validate_df=feature_set3_validate_df, clfs=svc_clfs, threshold_list=threshold_list, cols_to_leave=feature_set3)"
+    "experiment6_df = main(amount_data_df=validate_df, models_name='experiment6', train_df=feature_set3_train_df, validate_df=feature_set3_validate_df, clfs=svc_clfs, threshold_list=threshold_list, cols_to_leave=feature_set3)"
    ]
   },
   {
@@ -1129,7 +1151,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "experiment7_df = main(models_name='experiment7', train_df=feature_set4_train_df, validate_df=feature_set4_validate_df, clfs=clfs, threshold_list=threshold_list, cols_to_leave=feature_set4)"
+    "experiment7_df = main(amount_data_df=validate_df, models_name='experiment7', train_df=feature_set4_train_df, validate_df=feature_set4_validate_df, clfs=clfs, threshold_list=threshold_list, cols_to_leave=feature_set4)"
    ]
   },
   {
@@ -1148,7 +1170,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "experiment8_df = main(models_name='experiment8', train_df=feature_set4_train_df, validate_df=feature_set4_validate_df, clfs=svc_clfs, threshold_list=threshold_list, cols_to_leave=feature_set4)"
+    "experiment8_df = main(amount_data_df=validate_df, models_name='experiment8', train_df=feature_set4_train_df, validate_df=feature_set4_validate_df, clfs=svc_clfs, threshold_list=threshold_list, cols_to_leave=feature_set4)"
    ]
   },
   {
@@ -1175,7 +1197,7 @@
    },
    "outputs": [],
    "source": [
-    "experiment9_df = main(models_name='experiment9', train_df=feature_set5_train_df, validate_df=feature_set5_validate_df, clfs=clfs, threshold_list=threshold_list, cols_to_leave=feature_set5)"
+    "experiment9_df = main(amount_data_df=validate_df, models_name='experiment9', train_df=feature_set5_train_df, validate_df=feature_set5_validate_df, clfs=clfs, threshold_list=threshold_list, cols_to_leave=feature_set5)"
    ]
   },
   {
@@ -1194,7 +1216,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "experiment10_df = main(models_name='experiment10', train_df=feature_set5_train_df, validate_df=feature_set5_validate_df, clfs=svc_clfs, threshold_list=threshold_list, cols_to_leave=feature_set5)"
+    "experiment10_df = main(amount_data_df=validate_df, models_name='experiment10', train_df=feature_set5_train_df, validate_df=feature_set5_validate_df, clfs=svc_clfs, threshold_list=threshold_list, cols_to_leave=feature_set5)"
    ]
   },
   {
@@ -1219,7 +1241,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "experiment11_df = main(models_name='experiment11', train_df=feature_set6_train_df, validate_df=feature_set6_validate_df, clfs=clfs, threshold_list=threshold_list, cols_to_leave=feature_set6)"
+    "experiment11_df = main(amount_data_df=validate_df, models_name='experiment11', train_df=feature_set6_train_df, validate_df=feature_set6_validate_df, clfs=clfs, threshold_list=threshold_list, cols_to_leave=feature_set6)"
    ]
   },
   {
@@ -1238,7 +1260,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "experiment12_df = main(models_name='experiment12', train_df=feature_set6_train_df, validate_df=feature_set6_validate_df, clfs=svc_clfs, threshold_list=threshold_list, cols_to_leave=feature_set6)"
+    "experiment12_df = main(amount_data_df=validate_df, models_name='experiment12', train_df=feature_set6_train_df, validate_df=feature_set6_validate_df, clfs=svc_clfs, threshold_list=threshold_list, cols_to_leave=feature_set6)"
    ]
   },
   {
@@ -1252,9 +1274,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "### Feature set #7: the best 20% of players bet info (Bull/Bear) according to their overall profit + their bet size info (in CAKE tokens)"
    ]
@@ -1265,7 +1285,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "experiment13_df = main(models_name='experiment13', train_df=feature_set7_train_df, validate_df=feature_set7_validate_df, clfs=clfs, threshold_list=threshold_list, cols_to_leave=feature_set7)"
+    "experiment13_df = main(amount_data_df=validate_df, models_name='experiment13', train_df=feature_set7_train_df, validate_df=feature_set7_validate_df, clfs=clfs, threshold_list=threshold_list, cols_to_leave=feature_set7)"
    ]
   },
   {
@@ -1284,7 +1304,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "experiment14_df = main(models_name='experiment14', train_df=feature_set7_train_df, validate_df=feature_set7_validate_df, clfs=svc_clfs, threshold_list=threshold_list, cols_to_leave=feature_set7)"
+    "experiment14_df = main(amount_data_df=validate_df, models_name='experiment14', train_df=feature_set7_train_df, validate_df=feature_set7_validate_df, clfs=svc_clfs, threshold_list=threshold_list, cols_to_leave=feature_set7)"
    ]
   },
   {
@@ -1309,7 +1329,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "experiment15_df = main(models_name='experiment15', train_df=feature_set8_train_df, validate_df=feature_set8_validate_df, clfs=clfs, threshold_list=threshold_list, cols_to_leave=feature_set8)"
+    "experiment15_df = main(amount_data_df=validate_df, models_name='experiment15', train_df=feature_set8_train_df, validate_df=feature_set8_validate_df, clfs=clfs, threshold_list=threshold_list, cols_to_leave=feature_set8)"
    ]
   },
   {
@@ -1328,7 +1348,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "experiment16_df = main(models_name='experiment16', train_df=feature_set8_train_df, validate_df=feature_set8_validate_df, clfs=svc_clfs, threshold_list=threshold_list, cols_to_leave=feature_set8)"
+    "experiment16_df = main(amount_data_df=validate_df, models_name='experiment16', train_df=feature_set8_train_df, validate_df=feature_set8_validate_df, clfs=svc_clfs, threshold_list=threshold_list, cols_to_leave=feature_set8)"
    ]
   },
   {
@@ -1353,7 +1373,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "experiment17_df = main(models_name='experiment17', train_df=feature_set9_train_df, validate_df=feature_set9_validate_df, clfs=clfs, threshold_list=threshold_list, cols_to_leave=feature_set9)"
+    "experiment17_df = main(amount_data_df=validate_df, models_name='experiment17', train_df=feature_set9_train_df, validate_df=feature_set9_validate_df, clfs=clfs, threshold_list=threshold_list, cols_to_leave=feature_set9)"
    ]
   },
   {
@@ -1372,7 +1392,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "experiment18_df = main(models_name='experiment18', train_df=feature_set9_train_df, validate_df=feature_set9_validate_df, clfs=svc_clfs, threshold_list=threshold_list, cols_to_leave=feature_set9)"
+    "experiment18_df = main(amount_data_df=validate_df, models_name='experiment18', train_df=feature_set9_train_df, validate_df=feature_set9_validate_df, clfs=svc_clfs, threshold_list=threshold_list, cols_to_leave=feature_set9)"
    ]
   },
   {
