Notebook: Add the F1-score to the model evaluation

--- a/notebooks/PancakePredictPortfolio.ipynb
+++ b/notebooks/PancakePredictPortfolio.ipynb
@@ -894,23 +894,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import importlib\n",
-    "import simulator\n",
-    "\n",
-    "importlib.reload(simulator)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
     "import pickle\n",
+    "from sklearn.metrics import f1_score\n",
     "\n",
-    "def run(models_name, amount_data_df, x_train, y_train, x_test, y_test, clf, threshold=0.7, bet_size=3):\n",
+    "def run(models_name, amount_data_df, x_train, y_train, x_test, y_test, clf, threshold=0.7, bet_size=1):\n",
     "    # Check if the model already exists\n",
     "    model_name = f\"{models_name}_{str(clf)}.pkl\"\n",
     "    model_dir = f\"../models/{model_name}\"\n",
@@ -948,13 +937,17 @@
     "    # Get accuracy when probability is above threshold\n",
     "    accuracy = df[\"correct\"].sum() / (df['predicted_position'].count() + 0.0000001)  # Count only not NaN values\n",
     "\n",
+    "    # Calculate the F1 score\n",
+    "    df['prediction_position_all'] = np.where(df[\"Bear\"] > df[\"Bull\"], 0, 1)\n",
+    "    score = f1_score(df[\"position\"], df['prediction_position_all'], average=\"macro\")\n",
+    "\n",
     "    # Save the model\n",
     "    if not os.path.exists(model_dir):\n",
     "        with open(model_dir,'wb') as f:\n",
     "            print(f\"Saving the model {model_dir}\")\n",
     "            pickle.dump(clf, f)\n",
     "\n",
-    "    return {'classifier': str(clf), 'threshold': threshold, 'total_accuracy': total_accuracy,\n",
+    "    return {'classifier': str(clf), 'threshold': threshold, 'total_accuracy': total_accuracy, \"total_f1_score\": score,\n",
     "            'total_number_of_bets': len(y_test), 'accuracy_above_threshold': accuracy,\n",
     "            'number_of_bets_above_threshold': df['predicted_position'].count(), 'profit': profit}\n",
     "\n",
