--- a/notebooks/PancakePredictPortfolio.ipynb
+++ b/notebooks/PancakePredictPortfolio.ipynb
@@ -467,7 +467,8 @@
    "source": [
     "### Cleaning the data before the training\r\n",
     "1. Because NaN values provide no information we can delete all the rows that contain only NaNs. This would work in the production environment as if we get no information about the current round we can simply pass that round (so we don't place any bet).\r\n",
-    "2. For the simplicity we will remove all the rows with 'position' == 'House' so we end up with a binary classification problem. Later, when finally testing the model we will add this category once again (when its House you lose no matter if you place a bet for Bull or Bear)"
+    "2. For the simplicity we will remove all the rows with 'position' == 'House' so we end up with a binary classification problem. Later, when finally testing the model we will add this category once again (when its House you lose no matter if you place a bet for Bull or Bea\n",
+    "3. Do not consider transaction fees. Because many players are bots and they place their bet in the last few seconds of the round, in the production environment we should use higher gas price to be able to place the bet just after recording all the other players bets. The transaction cost per every bet will be 0.05 $\\$$ -0.2 $\\$$ r)"
    ]
   },
   {
