--- a/notebooks/PancakePredictPortfolio.ipynb
+++ b/notebooks/PancakePredictPortfolio.ipynb
@@ -900,7 +900,7 @@
     "import pickle\n",
     "from sklearn.metrics import f1_score\n",
     "\n",
-    "def run(models_name, amount_data_df, x_train, y_train, x_test, y_test, clf, threshold=0.7, bet_size=1):\n",
+    "def run(models_name, amount_data_df, x_train, y_train, x_test, y_test, clf, threshold=0.7, bet_size=1, min_multiplier=0):\n",
     "    # Check if the model already exists\n",
     "    model_name = f\"{models_name}_{str(clf)}.pkl\"\n",
     "    model_dir = f\"../models/{model_name}\"\n",
@@ -929,11 +929,13 @@
     "    df['bear_amount'] = amount_data_df['bear_amount']\n",
     "    df['total_amount'] = amount_data_df['total_amount']\n",
     "    \n",
-    "    simulation_results_df = simulator.simulate(df[['position', 'bull_amount', 'bear_amount', 'total_amount']], df['predicted_position'], bet_size, add_bet_to_pool = True)\n",
+    "    simulation_results_df = simulator.simulate(df[['position', 'bull_amount', 'bear_amount', 'total_amount']], df['predicted_position'], bet_size=bet_size, add_bet_to_pool = True, min_multiplier = min_multiplier)\n",
     "\n",
     "    # Drop rows where prediction is null and calculate the total profit\n",
     "    simulation_results_df = simulation_results_df[simulation_results_df['prediction'].notna()]\n",
     "    profit = simulation_results_df['profit'].sum()\n",
+    "\n",
+    "    played_rounds = (simulation_results_df['profit'] != 0).sum()\n",
     "    \n",
     "    # Get accuracy when probability is above threshold\n",
     "    accuracy = df[\"correct\"].sum() / (df['predicted_position'].count() + 0.0000001)  # Count only not NaN values\n",
@@ -950,10 +952,10 @@
     "\n",
     "    return {'classifier': str(clf), 'threshold': threshold, 'total_accuracy': total_accuracy, \"total_f1_score\": score,\n",
     "            'total_number_of_bets': len(y_test), 'accuracy_above_threshold': accuracy,\n",
-    "            'number_of_bets_above_threshold': df['predicted_position'].count(), 'profit': profit}\n",
+    "            'number_of_bets_above_threshold': df['predicted_position'].count(), 'total_number_of_bets_placed': played_rounds, 'profit': profit}\n",
     "\n",
     "\n",
-    "def main(models_name, amount_data_df, train_df, validate_df, clfs, threshold_list, cols_to_leave, bet_size=3):\n",
+    "def main(models_name, amount_data_df, train_df, validate_df, clfs, threshold_list, cols_to_leave, bet_size=1, min_multiplier=0):\n",
     "    X_test, y_test = validate_df.drop([\"position\"], axis=1), validate_df[\"position\"]\n",
     "    X_train, y_train = train_df.drop([\"position\"], axis=1), train_df[\"position\"]\n",
     "\n",
@@ -961,7 +963,7 @@
     "\n",
     "    for clf in clfs:\n",
     "        for threshold in threshold_list:\n",
-    "            data = run(models_name, amount_data_df, X_train, y_train, X_test, y_test, clf, threshold, bet_size)\n",
+    "            data = run(models_name, amount_data_df, X_train, y_train, X_test, y_test, clf, threshold, bet_size, min_multiplier)\n",
     "            data_list.append(data)\n",
     "\n",
     "    df = pd.DataFrame(data_list)\n",
@@ -992,7 +994,10 @@
     "            SVC(kernel='rbf', probability=True, C=10), SVC(kernel='linear', probability=True, C=10),\n",
     "            SVC(kernel='rbf', probability=True, C=50), SVC(kernel='linear', probability=True, C=50)]\n",
     "\n",
-    "threshold_list = [0.6, 0.7, 0.8, 0.9, 0.95]"
+    "threshold_list = [0.6, 0.7, 0.8, 0.9, 0.95]\n",
+    "\n",
+    "bet_size=1\n",
+    "min_multiplier=1.7"
    ]
   },
   {
@@ -1008,7 +1013,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "experiment1_df = main(amount_data_df=validate_df, models_name='experiment1', train_df=feature_set1_train_df, validate_df=feature_set1_validate_df, clfs=clfs, threshold_list=threshold_list, cols_to_leave=feature_set1)"
+    "experiment1_df = main(amount_data_df=validate_df, models_name='experiment1', train_df=feature_set1_train_df, validate_df=feature_set1_validate_df, clfs=clfs, threshold_list=threshold_list, cols_to_leave=feature_set1, bet_size=bet_size, min_multiplier=min_multiplier)"
    ]
   },
   {
@@ -1028,7 +1033,7 @@
    },
    "outputs": [],
    "source": [
-    "experiment2_df = main(amount_data_df=validate_df, models_name='experiment2', train_df=feature_set1_train_df, validate_df=feature_set1_validate_df, clfs=svc_clfs, threshold_list=threshold_list, cols_to_leave=feature_set1)"
+    "experiment2_df = main(amount_data_df=validate_df, models_name='experiment2', train_df=feature_set1_train_df, validate_df=feature_set1_validate_df, clfs=svc_clfs, threshold_list=threshold_list, cols_to_leave=feature_set1, bet_size=bet_size, min_multiplier=min_multiplier)"
    ]
   },
   {
@@ -1053,7 +1058,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "experiment3_df = main(amount_data_df=validate_df, models_name='experiment3', train_df=feature_set2_train_df, validate_df=feature_set2_validate_df, clfs=clfs, threshold_list=threshold_list, cols_to_leave=feature_set2)"
+    "experiment3_df = main(amount_data_df=validate_df, models_name='experiment3', train_df=feature_set2_train_df, validate_df=feature_set2_validate_df, clfs=clfs, threshold_list=threshold_list, cols_to_leave=feature_set2, bet_size=bet_size, min_multiplier=min_multiplier)"
    ]
   },
   {
@@ -1072,7 +1077,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "experiment4_df = main(amount_data_df=validate_df, models_name='experiment4', train_df=feature_set2_train_df, validate_df=feature_set2_validate_df, clfs=svc_clfs, threshold_list=threshold_list, cols_to_leave=feature_set2)"
+    "experiment4_df = main(amount_data_df=validate_df, models_name='experiment4', train_df=feature_set2_train_df, validate_df=feature_set2_validate_df, clfs=svc_clfs, threshold_list=threshold_list, cols_to_leave=feature_set2, bet_size=bet_size, min_multiplier=min_multiplier)"
    ]
   },
   {
@@ -1099,7 +1104,7 @@
    },
    "outputs": [],
    "source": [
-    "experiment5_df = main(amount_data_df=validate_df, models_name='experiment5', train_df=feature_set3_train_df, validate_df=feature_set3_validate_df, clfs=clfs, threshold_list=threshold_list, cols_to_leave=feature_set3)"
+    "experiment5_df = main(amount_data_df=validate_df, models_name='experiment5', train_df=feature_set3_train_df, validate_df=feature_set3_validate_df, clfs=clfs, threshold_list=threshold_list, cols_to_leave=feature_set3, bet_size=bet_size, min_multiplier=min_multiplier)"
    ]
   },
   {
@@ -1120,7 +1125,7 @@
    },
    "outputs": [],
    "source": [
-    "experiment6_df = main(amount_data_df=validate_df, models_name='experiment6', train_df=feature_set3_train_df, validate_df=feature_set3_validate_df, clfs=svc_clfs, threshold_list=threshold_list, cols_to_leave=feature_set3)"
+    "experiment6_df = main(amount_data_df=validate_df, models_name='experiment6', train_df=feature_set3_train_df, validate_df=feature_set3_validate_df, clfs=svc_clfs, threshold_list=threshold_list, cols_to_leave=feature_set3, bet_size=bet_size, min_multiplier=min_multiplier)"
    ]
   },
   {
@@ -1145,7 +1150,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "experiment7_df = main(amount_data_df=validate_df, models_name='experiment7', train_df=feature_set4_train_df, validate_df=feature_set4_validate_df, clfs=clfs, threshold_list=threshold_list, cols_to_leave=feature_set4)"
+    "experiment7_df = main(amount_data_df=validate_df, models_name='experiment7', train_df=feature_set4_train_df, validate_df=feature_set4_validate_df, clfs=clfs, threshold_list=threshold_list, cols_to_leave=feature_set4, bet_size=bet_size, min_multiplier=min_multiplier)"
    ]
   },
   {
@@ -1164,7 +1169,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "experiment8_df = main(amount_data_df=validate_df, models_name='experiment8', train_df=feature_set4_train_df, validate_df=feature_set4_validate_df, clfs=svc_clfs, threshold_list=threshold_list, cols_to_leave=feature_set4)"
+    "experiment8_df = main(amount_data_df=validate_df, models_name='experiment8', train_df=feature_set4_train_df, validate_df=feature_set4_validate_df, clfs=svc_clfs, threshold_list=threshold_list, cols_to_leave=feature_set4, bet_size=bet_size, min_multiplier=min_multiplier)"
    ]
   },
   {
@@ -1191,7 +1196,7 @@
    },
    "outputs": [],
    "source": [
-    "experiment9_df = main(amount_data_df=validate_df, models_name='experiment9', train_df=feature_set5_train_df, validate_df=feature_set5_validate_df, clfs=clfs, threshold_list=threshold_list, cols_to_leave=feature_set5)"
+    "experiment9_df = main(amount_data_df=validate_df, models_name='experiment9', train_df=feature_set5_train_df, validate_df=feature_set5_validate_df, clfs=clfs, threshold_list=threshold_list, cols_to_leave=feature_set5, bet_size=bet_size, min_multiplier=min_multiplier)"
    ]
   },
   {
@@ -1210,7 +1215,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "experiment10_df = main(amount_data_df=validate_df, models_name='experiment10', train_df=feature_set5_train_df, validate_df=feature_set5_validate_df, clfs=svc_clfs, threshold_list=threshold_list, cols_to_leave=feature_set5)"
+    "experiment10_df = main(amount_data_df=validate_df, models_name='experiment10', train_df=feature_set5_train_df, validate_df=feature_set5_validate_df, clfs=svc_clfs, threshold_list=threshold_list, cols_to_leave=feature_set5, bet_size=bet_size, min_multiplier=min_multiplier)"
    ]
   },
   {
@@ -1235,7 +1240,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "experiment11_df = main(amount_data_df=validate_df, models_name='experiment11', train_df=feature_set6_train_df, validate_df=feature_set6_validate_df, clfs=clfs, threshold_list=threshold_list, cols_to_leave=feature_set6)"
+    "experiment11_df = main(amount_data_df=validate_df, models_name='experiment11', train_df=feature_set6_train_df, validate_df=feature_set6_validate_df, clfs=clfs, threshold_list=threshold_list, cols_to_leave=feature_set6, bet_size=bet_size, min_multiplier=min_multiplier)"
    ]
   },
   {
@@ -1254,7 +1259,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "experiment12_df = main(amount_data_df=validate_df, models_name='experiment12', train_df=feature_set6_train_df, validate_df=feature_set6_validate_df, clfs=svc_clfs, threshold_list=threshold_list, cols_to_leave=feature_set6)"
+    "experiment12_df = main(amount_data_df=validate_df, models_name='experiment12', train_df=feature_set6_train_df, validate_df=feature_set6_validate_df, clfs=svc_clfs, threshold_list=threshold_list, cols_to_leave=feature_set6, bet_size=bet_size, min_multiplier=min_multiplier)"
    ]
   },
   {
@@ -1279,7 +1284,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "experiment13_df = main(amount_data_df=validate_df, models_name='experiment13', train_df=feature_set7_train_df, validate_df=feature_set7_validate_df, clfs=clfs, threshold_list=threshold_list, cols_to_leave=feature_set7)"
+    "experiment13_df = main(amount_data_df=validate_df, models_name='experiment13', train_df=feature_set7_train_df, validate_df=feature_set7_validate_df, clfs=clfs, threshold_list=threshold_list, cols_to_leave=feature_set7, bet_size=bet_size, min_multiplier=min_multiplier)"
    ]
   },
   {
@@ -1298,7 +1303,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "experiment14_df = main(amount_data_df=validate_df, models_name='experiment14', train_df=feature_set7_train_df, validate_df=feature_set7_validate_df, clfs=svc_clfs, threshold_list=threshold_list, cols_to_leave=feature_set7)"
+    "experiment14_df = main(amount_data_df=validate_df, models_name='experiment14', train_df=feature_set7_train_df, validate_df=feature_set7_validate_df, clfs=svc_clfs, threshold_list=threshold_list, cols_to_leave=feature_set7, bet_size=bet_size, min_multiplier=min_multiplier)"
    ]
   },
   {
@@ -1323,7 +1328,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "experiment15_df = main(amount_data_df=validate_df, models_name='experiment15', train_df=feature_set8_train_df, validate_df=feature_set8_validate_df, clfs=clfs, threshold_list=threshold_list, cols_to_leave=feature_set8)"
+    "experiment15_df = main(amount_data_df=validate_df, models_name='experiment15', train_df=feature_set8_train_df, validate_df=feature_set8_validate_df, clfs=clfs, threshold_list=threshold_list, cols_to_leave=feature_set8, bet_size=bet_size, min_multiplier=min_multiplier)"
    ]
   },
   {
@@ -1342,7 +1347,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "experiment16_df = main(amount_data_df=validate_df, models_name='experiment16', train_df=feature_set8_train_df, validate_df=feature_set8_validate_df, clfs=svc_clfs, threshold_list=threshold_list, cols_to_leave=feature_set8)"
+    "experiment16_df = main(amount_data_df=validate_df, models_name='experiment16', train_df=feature_set8_train_df, validate_df=feature_set8_validate_df, clfs=svc_clfs, threshold_list=threshold_list, cols_to_leave=feature_set8, bet_size=bet_size, min_multiplier=min_multiplier)"
    ]
   },
   {
@@ -1367,7 +1372,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "experiment17_df = main(amount_data_df=validate_df, models_name='experiment17', train_df=feature_set9_train_df, validate_df=feature_set9_validate_df, clfs=clfs, threshold_list=threshold_list, cols_to_leave=feature_set9)"
+    "experiment17_df = main(amount_data_df=validate_df, models_name='experiment17', train_df=feature_set9_train_df, validate_df=feature_set9_validate_df, clfs=clfs, threshold_list=threshold_list, cols_to_leave=feature_set9, bet_size=bet_size, min_multiplier=min_multiplier)"
    ]
   },
   {
@@ -1386,7 +1391,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "experiment18_df = main(amount_data_df=validate_df, models_name='experiment18', train_df=feature_set9_train_df, validate_df=feature_set9_validate_df, clfs=svc_clfs, threshold_list=threshold_list, cols_to_leave=feature_set9)"
+    "experiment18_df = main(amount_data_df=validate_df, models_name='experiment18', train_df=feature_set9_train_df, validate_df=feature_set9_validate_df, clfs=svc_clfs, threshold_list=threshold_list, cols_to_leave=feature_set9, bet_size=bet_size, min_multiplier=min_multiplier)"
    ]
   },
   {
