Notebook: Add "simulation hyperparameters" section

--- a/notebooks/PancakePredictPortfolio.ipynb
+++ b/notebooks/PancakePredictPortfolio.ipynb
@@ -370,6 +370,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Simulation hyperparameters\n",
+    "We can bet different amount of money on each round, affecting the pool sizes and finally our and other players outcome. Not all rounds are worth betting - when we bet for Bull and there are 100$\\$$ in total in the Bull pool and 5$\\$$ in the Bear pool our potential profits are small but still we can loose 100% of the money invested. Thats why we should consider 2 additional hyperparameters: size of our bet (for simplicity it will be a fixed value in CAKE tokens, but in the future it could be calculated with soem formula) and minimal potential profit (as multiplier) that is needed to place a bet. These parameters will be tuned after choosing the most accurate models."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bet_size=1\n",
+    "min_multiplier=1.0"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Preparing the data to be used in the ml"
    ]
   },
@@ -994,10 +1012,7 @@
     "            SVC(kernel='rbf', probability=True, C=10), SVC(kernel='linear', probability=True, C=10),\n",
     "            SVC(kernel='rbf', probability=True, C=50), SVC(kernel='linear', probability=True, C=50)]\n",
     "\n",
-    "threshold_list = [0.6, 0.7, 0.8, 0.9, 0.95]\n",
-    "\n",
-    "bet_size=1\n",
-    "min_multiplier=1.7"
+    "threshold_list = [0.6, 0.7, 0.8, 0.9, 0.95]"
    ]
   },
   {
