Notebook: Add intro

--- a/notebooks/PancakePredictPortfolio.ipynb
+++ b/notebooks/PancakePredictPortfolio.ipynb
@@ -4,6 +4,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "What is Pancake Prediction?\n",
+    "Pancake Prediction is a feature within PancakeSwap, a popular decentralized finance (DeFi) platform built on the Binance Smart Chain. This feature allows users to predict whether the price of certain cryptocurrencies, specifically CAKE and BNB, will rise or fall within a specified time frame, usually every five minutes.\n",
+    "\n",
+    "Users participate in Pancake Prediction v2 by selecting either an 'Enter UP' option if they believe the price will rise, or an 'Enter DOWN' option if they think it will fall. To make a prediction, users commit a certain amount of BNB or CAKE tokens. If their prediction is correct, they win a reward, which is deposited into their digital wallee\n",
+    "\n",
+    "\n",
+    "It's important to note that PancakeSwap, including its prediction feature, operates as a decentralized exchange, meaning it doesn't have a central authority overseeing it. The platform earns revenue by charging a small trading fee on each transaction, which is then split between liquidity providers and the PancakeSwap t\n",
+    "\n",
+    "Pancake Prediction v2 on PancakeSwap shares similarities with binary options trading. Both involve predicting the direction of an asset's price movement within a specified time frame (5 minutes). If your prediction is correct, you win a reward; if not, you lose your investment.d: Both are high-risk and high-reward activities. The simplicity of the decision (up or down) masks the difficulty of making accurate predictions, especially in short time frame\n",
+    "\n",
+    "Link: https://pancakeswap.finance/prediction?token=CAKE"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Collecting the data\n",
     "First we have to get all the needed data. We will use web3py with Pancake bet contract (0x0E3A8078EDD2021dadcdE733C6b4a86E51EE8f07) and requests with bscscan API."
    ]
@@ -263,6 +280,7 @@
    "source": [
     "import datetime\n",
     "import pandas as pd\n",
+    "import numpy as np\n",
     "\n",
     "time_from_training = int(datetime.datetime(2022, 10, 28, 0, 0).timestamp())\n",
     "time_to_training = int(datetime.datetime(2022, 12, 28, 0, 0).timestamp())\n",
