Add requirements.txt support

--- a/notebooks/PancakePredictPortfolio.ipynb
+++ b/notebooks/PancakePredictPortfolio.ipynb
@@ -57,6 +57,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Install dependencies from the requirements.txt file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install  -r ../requirements.txt"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Getting active players\r\n",
     "Use get_active_players.py main() with start and end time. It may be required to change the main function loop to iterate through more past transactions.\r\n",
     "Also change CURRENT_BLOCK_NUMBER to the current one - to start checking transactions before this block."
