Notebook: Update the saving&loading the models with the k-fold feature

--- a/notebooks/PancakePredictPortfolio.ipynb
+++ b/notebooks/PancakePredictPortfolio.ipynb
@@ -1008,18 +1008,18 @@
     "from sklearn.metrics import f1_score\n",
     "from sklearn.model_selection import TimeSeriesSplit\n",
     "\n",
-    "def run(models_name, amount_data_df, x_train, y_train, x_test, y_test, clf, threshold=0.7, bet_size=1, min_multiplier=0):\n",
+    "def run(k, models_name, amount_data_df, x_train, y_train, x_test, y_test, clf, threshold=0.7, bet_size=1, min_multiplier=0):\n",
     "    # Check if the model already exists\n",
-    "    # model_name = f\"{models_name}_{str(clf)}.pkl\"\n",
-    "    # model_dir = f\"../models/{model_name}\"\n",
+    "    model_name = f\"{models_name}_{str(clf)}_k{k}.pkl\"\n",
+    "    model_dir = f\"../models/{model_name}\"\n",
     "\n",
-    "    # if os.path.exists(model_dir):\n",
-    "    #     print(f\"Loading the model {model_dir}\")\n",
-    "    #     with open(model_dir, 'rb') as f:\n",
-    "    #         clf = pickle.load(f)\n",
-    "    # else:\n",
-    "    #     print(f\"Training the model {clf}\")\n",
-    "    #     clf.fit(x_train, y_train)\n",
+    "    if os.path.exists(model_dir):\n",
+    "        print(f\"Loading the model {model_dir}\")\n",
+    "        with open(model_dir, 'rb') as f:\n",
+    "            clf = pickle.load(f)\n",
+    "    else:\n",
+    "        print(f\"Training the model {clf}\")\n",
+    "        clf.fit(x_train, y_train)\n",
     "    clf.fit(x_train, y_train)\n",
     "\n",
     "    total_accuracy = clf.score(x_test, y_test)\n",
@@ -1054,10 +1054,10 @@
     "    score = f1_score(df[\"position\"], df['prediction_position_all'], average=\"macro\")\n",
     "\n",
     "    # Save the model\n",
-    "    # if not os.path.exists(model_dir):\n",
-    "    #     with open(model_dir,'wb') as f:\n",
-    "    #         print(f\"Saving the model {model_dir}\")\n",
-    "    #         pickle.dump(clf, f)\n",
+    "    if not os.path.exists(model_dir):\n",
+    "        with open(model_dir,'wb') as f:\n",
+    "            print(f\"Saving the model {model_dir}\")\n",
+    "            pickle.dump(clf, f)\n",
     "\n",
     "    return {'classifier': str(clf), 'threshold': threshold, 'total_accuracy': total_accuracy, \"total_f1_score\": score,\n",
     "            'total_number_of_bets': len(y_test), 'accuracy_above_threshold': accuracy,\n",
@@ -1065,10 +1065,7 @@
     "\n",
     "\n",
     "def main(models_name, amount_data_df, merged_train_df, clfs, threshold_list, cols_to_leave, bet_size=1, min_multiplier=0, k=10):\n",
-    "    # X_test, y_test = validate_df.drop([\"position\"], axis=1), validate_df[\"position\"]\n",
-    "    # X_train, y_train = train_df.drop([\"position\"], axis=1), train_df[\"position\"]\n",
-    "\n",
-    "    # k-fold cross-validation\n",
+    "    # k-fold cross-validation made for time series\n",
     "    tscv = TimeSeriesSplit(n_splits=k)\n",
     "    X, y = merged_train_df.drop([\"position\"], axis=1), merged_train_df[\"position\"]\n",
     "\n",
@@ -1078,17 +1075,19 @@
     "        print(f'Classifier: {clf}')\n",
     "        for threshold in threshold_list:\n",
     "            print(f'Threshold: {threshold}')\n",
-    "            # data = run(models_name, amount_data_df, X_train, y_train, X_test, y_test, clf, threshold, bet_size, min_multiplier)\n",
-    "            # data_list.append(data)\n",
     "\n",
     "            kfold_data_list = []\n",
+    "\n",
+    "            current_k = 1\n",
     "            for train_index, test_index in tscv.split(X):\n",
-    "                print(f'indexes: train: {train_index} test:{test_index}')\n",
+    "                print(f'K: {current_k}')\n",
     "                X_train, X_test = X.iloc[train_index], X.iloc[test_index]\n",
     "                y_train, y_test = y.iloc[train_index], y.iloc[test_index]\n",
     "                \n",
-    "                data = run(models_name, amount_data_df, X_train, y_train, X_test, y_test, clf, threshold, bet_size, min_multiplier)\n",
+    "                data = run(current_k, models_name, amount_data_df, X_train, y_train, X_test, y_test, clf, threshold, bet_size, min_multiplier)\n",
     "                kfold_data_list.append(data)\n",
+    "\n",
+    "                current_k += 1\n",
     "\n",
     "            # Calculate the mean values\n",
     "            mean_data = kfold_data_list[0]\n",
@@ -1586,7 +1585,7 @@
     "There are 6 hyperparameters to tune in total for 2 different feature sets.\n",
     "To save some time I will use random search instead of grid search.\n",
     "\n",
-    "Train_df will be used to train the models, validate_df to check the performance of the tuned models (hyperparameter tuning) and the final performance will be checked with an independent test_df."
+    "Train_df will be used to train the models, validate_df to check the performance of the tuned models (hyperparameter tuning) and the final performance will be checked with an independent test_df"
    ]
   },
   {
@@ -1597,13 +1596,6 @@
     "- https://otexts.com/fpp3/tscv.html\n",
     "- https://medium.com/@soumyachess1496/cross-validation-in-time-series-566ae4981ce4"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
