Notebook: Fix the mean accuracy_above_threshold when computing kfold results: do not consider low values as they are a result of a simulation when no bets were placed

--- a/notebooks/PancakePredictPortfolio.ipynb
+++ b/notebooks/PancakePredictPortfolio.ipynb
@@ -1081,6 +1081,7 @@
     "            current_k = 1\n",
     "            for train_index, test_index in tscv.split(X):\n",
     "                print(f'K: {current_k}')\n",
+    "                print(f'indexes: train: {train_index} test:{test_index}')\n",
     "                X_train, X_test = X.iloc[train_index], X.iloc[test_index]\n",
     "                y_train, y_test = y.iloc[train_index], y.iloc[test_index]\n",
     "                \n",
@@ -1094,10 +1095,15 @@
     "            mean_data['total_accuracy'] = sum(d['total_accuracy'] for d in kfold_data_list) / len(kfold_data_list)\n",
     "            mean_data['total_f1_score'] = sum(d['total_f1_score'] for d in kfold_data_list) / len(kfold_data_list)\n",
     "            mean_data['total_number_of_bets'] = sum(d['total_number_of_bets'] for d in kfold_data_list) / len(kfold_data_list)\n",
-    "            mean_data['accuracy_above_threshold'] = sum(d['accuracy_above_threshold'] for d in kfold_data_list) / len(kfold_data_list)\n",
     "            mean_data['number_of_bets_above_threshold'] = sum(d['number_of_bets_above_threshold'] for d in kfold_data_list) / len(kfold_data_list)\n",
     "            mean_data['total_number_of_bets_placed'] = sum(d['total_number_of_bets_placed'] for d in kfold_data_list) / len(kfold_data_list)\n",
     "            mean_data['profit'] = sum(d['profit'] for d in kfold_data_list) / len(kfold_data_list)\n",
+    "\n",
+    "            if len([d['accuracy_above_threshold'] for d in kfold_data_list if not d['accuracy_above_threshold'] < 0.1]) == 0:\n",
+    "                mean_data['accuracy_above_threshold'] = np.nan\n",
+    "            else:\n",
+    "                mean_data['accuracy_above_threshold'] = sum(d['accuracy_above_threshold'] for d in kfold_data_list if not d['accuracy_above_threshold'] < 0.1) / len([d['accuracy_above_threshold'] for d in kfold_data_list if not d['accuracy_above_threshold'] < 0.1])\n",
+    "\n",
     "            \n",
     "            data_list.append(mean_data)\n",
     "\n",
@@ -1202,7 +1208,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# This features set model takes much longer to train\n",
     "experiment3_df.sort_values(by='accuracy_above_threshold', ascending=False).head(20)"
    ]
   },
@@ -1272,6 +1277,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# This features set model takes much longer to train\n",
     "experiment6_df.sort_values(by='accuracy_above_threshold', ascending=False).head(20)"
    ]
   },
@@ -1298,7 +1304,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# This features set model takes much longer to train\n",
     "experiment7_df.sort_values(by='accuracy_above_threshold', ascending=False).head(20)"
    ]
   },
@@ -1346,7 +1351,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# This features set model takes much longer to train\n",
     "experiment9_df.sort_values(by='accuracy_above_threshold', ascending=False).head(20)"
    ]
   },
@@ -1392,7 +1396,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# This features set model takes much longer to train\n",
     "experiment11_df.sort_values(by='accuracy_above_threshold', ascending=False).head(20)"
    ]
   },
@@ -1438,7 +1441,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# This features set model takes much longer to train\n",
     "experiment13_df.sort_values(by='accuracy_above_threshold', ascending=False).head(20)"
    ]
   },
@@ -1483,12 +1485,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# This features set model takes much longer to train\n",
     "experiment15_df.sort_values(by='accuracy_above_threshold', ascending=False).head(20)"
    ]
   },
@@ -1534,7 +1533,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# This features set model takes much longer to train\n",
     "experiment17_df.sort_values(by='accuracy_above_threshold', ascending=False).head(20)"
    ]
   },
